--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head></head>
 
 <body>
-    <script src="./index.ts"></script>
-</body>
+    <script type="module" src="./index.ts" />
+    </body>
 
 </html>
