--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
+
 <html>
 
 <head></head>
 
 <body>
-    <script type="module" src="index.ts" />
+    <script type="module" src="./index.ts" />
     </body>
 
 </html>
