--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 
 <html>
 
-<head></head>
+<head><link rel="shortcut icon" href="https://yongsooim.github.io/fsba/graphics/img/logo.ico">
+</head>
 
 <body>
     <script type="module" src="./index.ts" />
-    </body>
+</body>
 
 </html>
