temp commit (animation test)

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <link
+      rel="shortcut icon"
+      href="https://yongsooim.github.io/fsba/graphics/pcxset/logo.ico"
+    />
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<head><link rel="shortcut icon" href="https://yongsooim.github.io/fsba/graphics/pcxset/logo.ico">
-</head>
-
-<body>
+  <body>
     <script type="module" src="./index.ts" />
-</body>
-
+  </body>
 </html>
