--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
       rel="shortcut icon"
       href="https://yongsooim.github.io/fsba/graphics/pcxset/logo.ico"
     />
-    <link href="styles.css" rel="stylesheet" type="text/css" />
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
+    <div id="app"></div>
     <script type="module" src="./index.ts" />
   </body>
 </html>
