--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
       href="https://yongsooim.github.io/fsba/graphics/pcxset/logo.ico"
     />
     <link href="./styles.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FSB</title>
   </head>
 
   <body>
