vite todo: fix CORS

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
       rel="shortcut icon"
       href="https://yongsooim.github.io/fsba/graphics/pcxset/logo.ico"
     />
-    <link href="./styles.css" rel="stylesheet" type="text/css" />
+    <link href="./src/styles.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FSB</title>
+    <title>fsbjs</title>
   </head>
 
   <body>
     <div id="app"></div>
-    <script type="module" src="./index.ts" />
+    <script type="module" src="./src/index.ts" />
   </body>
 </html>
