--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="Expires" content="-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="https://yongsooim.github.io/fsba/graphics/pcxset/logo.ico" type="image/x-icon">  
+
     <title>fsbjs</title>
   </head>
 
