add draft for custom camera bound

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
   <body>
     <div id="app"></div>
-    <script type="module" src="./src/index.ts" />
+    <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
