--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div id="app"></div>
-    <script type="module" src="./src/index.ts"></script>
+    <div id="game"></div>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
