--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div id="game"></div>
+    <div id="game" tabindex="0"></div>
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
