--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
   <body>
     <div id="game" tabindex="0"></div>
-    <script type="module" src="./src/main.ts"></script>
+    <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
